...
                    .onAppear {
                        self.start.isRankedMode = false
                    }
                    .navigationBarTitle("")
                    .navigationBarHidden(true)
                ) {
                    Text("Single Player")
                }
                .buttonStyle(FilledButton(padding: 18, fontSize: 40))
                .animation(.spring())
                
                NavigationLink(destination: ContentView(content: rankedContent, start: start)
                .onAppear {
...
